tests/semantic/invalid/invalid_relational.mc
bool left = true;
bool right = false;
bool ordered = left < right;
